# summit

./: .gitignore  Cargo.toml  README.md  example_genesis.toml
.cargo/: config.toml
.github/workflows/: ci.yml
application/: Cargo.toml
application/src/: actor.rs  config.rs  db.rs  engine_client.rs  finalizer.rs  ingress.rs  lib.rs  registry.rs
docs/: README.md  actor-system.md  architecture.md  commonware-dependencies.md  engine-api-integration.md  running-local-network.md  security-model.md  staking-and-participating.md
finalizer/: Cargo.toml
finalizer/src/: actor.rs  archive.rs  block_fetcher.rs  config.rs  db.rs  ingress.rs  lib.rs
node/: Cargo.toml
node/src/: args.rs  config.rs  engine.rs  keys.rs  lib.rs  rpc.rs
node/src/prom/: recorder.rs  server.rs
node/src/test_harness/: common.rs  mock_engine_client.rs  mod.rs  utils.rs
node/src/tests/: checkpointing.rs  execution_requests.rs  mod.rs  syncer.rs
node/tests/: tests.rs
orchestrator/: Cargo.toml
orchestrator/src/: actor.rs  ingress.rs  lib.rs
rpc/: Cargo.toml
rpc/src/: lib.rs  routes.rs
syncer/: Cargo.toml
syncer/src/: actor.rs  cache.rs  config.rs  coordinator.rs  finalizer.rs  handler.rs  ingress.rs  key.rs  lib.rs
syncer/src/ingress/: handler.rs  mailbox.rs  mod.rs
syncer/src/mocks/: application.rs  fixtures.rs  mod.rs
syncer/src/resolver/: p2p.rs
testnet/node0/: consensus_key.pem  node_key.pem  share.pem
testnet/node1/: consensus_key.pem  node_key.pem  share.pem
testnet/node2/: consensus_key.pem  node_key.pem  share.pem
testnet/node3/: consensus_key.pem  node_key.pem  share.pem
types/: Cargo.toml
types/src/: account.rs  block.rs  checkpoint.rs  consensus_state.rs  consensus_state_query.rs  engine_client.rs  execution_request.rs  genesis.rs  header.rs  key_paths.rs  keystore.rs  lib.rs  network_oracle.rs  registry.rs  reth.rs  rpc.rs  scheme.rs  utils.rs  withdrawal.rs
utils/: Cargo.toml
utils/src/: lib.rs  persistent_queue.rs
