[workspace]
members = [ "application", "node", "rpc", "types", "finalizer", "orchestrator", "syncer"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
# Our crates
summit-types = { path = "types" }
summit-application = { path = "application" }
summit-syncer = {path = "syncer" }
summit-finalizer = {path = "finalizer"}
summit-rpc = {path = "rpc"}
summit-orchestrator = {path = "orchestrator"}

commonware-consensus = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "f395c9e" }
commonware-cryptography = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "f395c9e" }
commonware-storage = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "f395c9e" }
commonware-runtime = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "f395c9e" }
commonware-codec = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "f395c9e" }
commonware-p2p = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "f395c9e" }
commonware-broadcast = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "f395c9e" }
commonware-utils = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "f395c9e" }
commonware-resolver = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "f395c9e" }
commonware-macros = { git = "https://github.com/commonwarexyz/monorepo.git", rev = "f395c9e" }

alloy-consensus = "1.0.12"
alloy-eips = { version = "1.0.19", features = ["ssz"] }
alloy-genesis = "1.0.9"
alloy-network = "1.0.9"
alloy-node-bindings = "1.0.9"
alloy-rpc-client = { version = "1.0.9", features = [
    "hyper",
    "alloy-transport-http",
] }
alloy-rpc-types = "1.0.9"
alloy-rpc-types-engine = { version = "1.0.9", features = ["serde", "ssz"] }
alloy-signer = "1.0.9"
alloy-signer-local = "1.0.9"
alloy-transport-http = { version = "1.0.9", features = ["hyper", "jwt-auth"] }
alloy-provider = { version = "1.0.9", features = ["hyper", "engine-api","ipc"] }
alloy-primitives = "1.2.1"
alloy-transport-ipc = { version = "1.0.9" }
url = "2.5"

futures = "0.3.31"
http = "1.0"
hex = "0.4"
http-body-util = "0.1.3"
reqwest = "0.12"
socket2 = "0.6"
tower = "0.5.2"
tokio = "1.46.0"
tokio-util = "0.7.16"
console-subscriber = "0.4"
pin-project = "1.1.10"

ethereum_ssz = "0.9.0"
ethereum_ssz_derive = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.9"
zeroize = "1.8"

anyhow = "1.0.99"
eyre = "0.6"

bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
governor = "0.6.3"
rand = "0.8.5"
tracing = "0.1.41"
