[package]
name = "summit-application"
version.workspace = true
edition.workspace = true

[dependencies]
summit-types.workspace = true
summit-syncer.workspace = true
summit-finalizer.workspace = true

anyhow.workspace = true
tracing.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-runtime.workspace = true
commonware-macros.workspace = true
commonware-utils.workspace = true

futures.workspace = true
governor.workspace = true
rand.workspace = true
tokio-util.workspace = true

# For metrics - activate with `prom` feature
metrics = { version = "0.24.0", optional = true }

# Only used for tests, but it cannot be in dep-dependencies, because
# the test flag is only active in application for tests that are run inside of application.
# But e2e tests are in the node crate.
# commonware depends on it, so we have to build it anyway.
prometheus-client = "0.22.3"

[features]
prom = ["metrics"]
base-bench = []
bench = []
