[package]
name = "summit"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dkg_testnet"
path = "src/bin/dkg_testnet.rs"

[[bin]]
name = "testnet"
path = "src/bin/testnet.rs"

[dependencies]
summit-types.workspace = true
summit-application.workspace = true

commonware-broadcast.workspace = true
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-p2p.workspace = true
commonware-runtime.workspace = true
commonware-utils.workspace = true

anyhow.workspace = true
eyre = { workspace = true, optional = true }
clap.workspace = true
rand.workspace = true
tracing.workspace = true
dirs = "6.0.0"

# testnet bin deps 
alloy-node-bindings.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-network = { workspace = true }
alloy-primitives.workspace = true
alloy-rpc-types = { workspace = true }

ethereum_ssz.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

futures.workspace = true
governor.workspace = true
http = { workspace = true, optional = true }

# for prom
prometheus = { version = "0.14", optional = true }
reth-metrics = { git = "https://github.com/SeismicSystems/seismic-reth.git", branch = "seismic", optional = true }
metrics = { version = "0.24.0", optional = true }
metrics-exporter-prometheus = { version = "0.16.0", default-features = false, optional = true }
metrics-process = { version = "2.1.0", optional = true }
metrics-util = { default-features = false, version = "0.19.0", optional = true }
jsonrpsee-server = { version = "0.25.1", optional = true }
tokio = { workspace = true, optional = true, features = [
  "full",
  "rt-multi-thread",
  "time",
] }
tower = { version = "0.5.2", optional = true }

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = { version = "0.6", optional = true, features = ["stats"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17.0", optional = true }

[dev-dependencies]
commonware-macros.workspace = true
tracing-subscriber = "0.3.19"
# test harness (move to dev-deps later)
alloy-rpc-types-engine.workspace = true
alloy-consensus.workspace = true
dashmap = "6.1.0"
sha3 = "0.10.8"
alloy-eips = "1.0.23"
tokio = { workspace = true, features = ["full", "rt-multi-thread", "time"] }

[features]
prom = [
  "prometheus",
  "reth-metrics",
  "metrics",
  "metrics-exporter-prometheus",
  "metrics-process",
  "metrics-util",
  "jsonrpsee-server",
  "http",
  "eyre",
  "procfs",
  "tokio",
  "tower",
]
jemalloc = ["dep:tikv-jemalloc-ctl"]
