[package]
name = "summit"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dkg_testnet"
path = "src/bin/dkg_testnet.rs"

[[bin]]
name = "testnet"
path = "src/bin/testnet.rs"

[[bin]]
name = "block-fetcher"
path = "src/bin/block_fetcher.rs"
required-features = ["bench"]

[[bin]]
name = "execute-blocks"
path = "src/bin/execute_blocks.rs"
required-features = ["bench"]

[dependencies]
summit-types.workspace = true
summit-application.workspace = true
summit-rpc = { path = "../rpc" }

commonware-broadcast.workspace = true
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-p2p.workspace = true
commonware-runtime.workspace = true
commonware-utils.workspace = true

anyhow.workspace = true
eyre = { workspace = true, optional = true }
rand.workspace = true
tracing.workspace = true
clap.workspace = true
dirs.workspace = true

tokio = { version = "1.45.1", features = ["sync"] }

# testnet bin deps 
alloy-node-bindings.workspace = true
alloy-network = { workspace = true }
alloy-primitives.workspace = true
alloy-provider = { version = "1.0.30", features = ["reqwest-rustls-tls"] }
alloy-rpc-client.workspace = true
alloy-rpc-types-engine = { version = "1.0.9", features = ["serde"] }
op-alloy-consensus = { version = "0.19.1", default-features = false, features = ["alloy-compat"] }
tracing-subscriber = "0.3.19"


serde.workspace = true
serde_json.workspace = true
toml.workspace = true

futures.workspace = true
governor.workspace = true
http = { workspace = true, optional = true }

# for prom
prometheus = { version = "0.14", optional = true }
reth-metrics = { git = "https://github.com/SeismicSystems/seismic-reth.git", branch = "seismic", optional = true }
metrics = { version = "0.24.0", optional = true }
metrics-exporter-prometheus = { version = "0.16.0", default-features = false, optional = true }
metrics-process = { version = "2.1.0", optional = true }
metrics-util = { default-features = false, version = "0.19.0", optional = true }
jsonrpsee-server = { version = "0.25.1", optional = true }
tower = { version = "0.5.2", optional = false }

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = { version = "0.6", optional = true, features = ["stats"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17.0", optional = true }

[dev-dependencies]
commonware-macros.workspace = true
tracing-subscriber = "0.3.19"
# test harness (move to dev-deps later)
alloy-rpc-types-engine.workspace = true
alloy-consensus.workspace = true
dashmap = "6.1.0"
sha3 = "0.10.8"
alloy-eips = "1.0.23"
reqwest.workspace = true
reth-tasks = { git = "https://github.com/SeismicSystems/seismic-reth.git", branch = "seismic" }
socket2.workspace = true
tokio = { workspace = true, features = ["full", "rt-multi-thread", "time"] }
alloy-signer.workspace = true

[features]
prom = [
  "prometheus",
  "reth-metrics",
  "metrics",
  "metrics-exporter-prometheus",
  "metrics-process",
  "metrics-util",
  "jsonrpsee-server",
  "http",
  "eyre",
  "procfs",
]
jemalloc = ["dep:tikv-jemalloc-ctl"]
bench = []
