[package]
name = "summit"
version.workspace = true
edition.workspace = true

[[bin]]
name = "testnet"
path = "src/bin/testnet.rs"

[[bin]]
name = "genesis"
path = "src/bin/genesis.rs"

[[bin]]
name = "stake-and-checkpoint"
path = "src/bin/stake_and_checkpoint.rs"
required-features = ["e2e"]

[[bin]]
name = "withdraw-and-exit"
path = "src/bin/withdraw_and_exit.rs"
required-features = ["e2e"]

[[bin]]
name = "execute-blocks"
path = "src/bin/execute_blocks.rs"
required-features = ["bench"]

[dependencies]
summit-types.workspace = true
summit-application = { workspace = true, features = [] }
summit-rpc.workspace = true
summit-syncer.workspace = true
summit-finalizer.workspace = true
summit-orchestrator.workspace = true

commonware-broadcast.workspace = true
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-p2p.workspace = true
commonware-runtime.workspace = true
commonware-utils.workspace = true

anyhow.workspace = true
eyre = { workspace = true, optional = true }
rand.workspace = true
tracing.workspace = true
clap.workspace = true
dirs.workspace = true

tokio = { version = "1.45.1", features = ["sync"] }
tokio-util.workspace = true

# stake and checkpoint bin deps
alloy = "1.0.23"
ethereum_ssz.workspace = true
reqwest.workspace = true

# testnet bin deps
alloy-node-bindings.workspace = true
alloy-network = { workspace = true }
alloy-primitives.workspace = true
alloy-provider = { version = "1.0.30", features = ["reqwest-rustls-tls"] }
alloy-rpc-client.workspace = true
alloy-rpc-types-engine = { version = "1.0.9", features = ["serde"] }
op-alloy-consensus = { version = "0.19.1", default-features = false, features = ["alloy-compat"] }
tracing-subscriber = "0.3.19"

serde.workspace = true
serde_json.workspace = true
toml.workspace = true

zeroize.workspace = true
futures.workspace = true
governor.workspace = true
http = { workspace = true, optional = true }

# for prom
prometheus = { version = "0.14", optional = true }
reth-metrics = { git = "https://github.com/SeismicSystems/seismic-reth.git", branch = "seismic", optional = true }
metrics = { version = "0.24.0", optional = true }
metrics-exporter-prometheus = { version = "0.16.0", default-features = false, optional = true }
metrics-process = { version = "2.1.0", optional = true }
metrics-util = { default-features = false, version = "0.19.0", optional = true }
jsonrpsee-server = { version = "0.25.1", optional = true }
tower = { version = "0.5.2", optional = false }
console-subscriber = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = { version = "0.6", optional = true, features = ["stats"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17.0", optional = true }

[dev-dependencies]
commonware-macros.workspace = true
tracing-subscriber = "0.3.19"
# test harness (move to dev-deps later)
alloy-rpc-types-engine.workspace = true
alloy-consensus.workspace = true
dashmap = "6.1.0"
sha3 = "0.10.8"
alloy-eips = "1.0.23"
reqwest.workspace = true
reth-tasks = { git = "https://github.com/SeismicSystems/seismic-reth.git", branch = "seismic" }
socket2.workspace = true
tokio = { workspace = true, features = ["full", "rt-multi-thread", "time"] }
alloy-signer.workspace = true

[features]
prom = [
  "prometheus",
  "reth-metrics",
  "metrics",
  "metrics-exporter-prometheus",
  "metrics-process",
  "metrics-util",
  "jsonrpsee-server",
  "http",
  "eyre",
  "procfs",
]
tokio-console = ["console-subscriber"]
jemalloc = ["dep:tikv-jemalloc-ctl"]
base-bench = ["summit-application/base-bench", "summit-types/base-bench"]
bench = ["summit-application/bench", "summit-types/bench"]
e2e = []
