[package]
name = "summit-rpc"
version.workspace = true
edition.workspace = true

[lib]
name = "summit_rpc"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["net"] }
futures.workspace = true
axum = { version = "0.8.4"}
summit-types = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-utils = { workspace = true }
commonware-codec = { workspace = true }
dirs = "5.0.1"
serde = { workspace = true }
tracing.workspace = true