[package]
name = "summit-syncer"
version.workspace = true
edition.workspace = true

[dependencies]
summit-types.workspace = true

commonware-broadcast.workspace = true
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-macros.workspace = true
commonware-resolver.workspace = true
commonware-runtime.workspace = true
commonware-storage.workspace = true
commonware-p2p.workspace = true
commonware-utils.workspace = true

bytes.workspace = true
futures.workspace = true
governor.workspace = true
rand.workspace = true
tracing.workspace = true
pin-project.workspace = true

# For metrics - activate with `prom` feature
metrics = { version = "0.24.0", optional = true }
prometheus-client = { version = "0.24.0", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3.19"

[features]
prom = ["metrics", "prometheus-client"]
test-mocks = []
