[package]
name = "summit-types"
version.workspace = true
edition.workspace = true

[dependencies]
commonware-cryptography.workspace = true
commonware-consensus.workspace = true
commonware-codec.workspace = true
commonware-utils.workspace = true

alloy-rpc-types-engine.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true

anyhow.workspace = true
dirs.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
serde.workspace = true
toml.workspace = true

bytes.workspace = true

serde_json = { workspace = true, optional = true }

[features]
bench = ["serde_json"]