[package]
name = "summit-types"
version.workspace = true
edition.workspace = true

[dependencies]
commonware-cryptography.workspace = true
commonware-consensus.workspace = true
commonware-codec.workspace = true
commonware-utils.workspace = true
commonware-resolver.workspace = true
commonware-p2p.workspace = true
commonware-runtime.workspace = true

alloy-rpc-types-engine.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-provider.workspace = true
alloy-transport-ipc.workspace = true

futures.workspace = true
zeroize.workspace = true
# for reth.rs module (e2e feature only)
alloy-genesis = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
url = { workspace = true, optional = true }
anyhow.workspace = true
dirs.workspace = true
ethereum_ssz.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true

bytes.workspace = true
serde_json = { workspace = true, optional = true }

# for benchmarking
op-alloy-network = { version = "0.19.1", optional = true }
op-alloy-rpc-types-engine = { version = "0.19.1", optional = true }
libc = { version = "0.2.174", optional = true}

[features]
base-bench = ["op-alloy-network", "op-alloy-rpc-types-engine","serde_json"]
bench = ["serde_json"]
e2e = ["libc", "alloy-genesis", "rand", "url"]